src/objects/inscor__BOM__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Allow_Condition_Ranking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Condition Ranking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>inscor__Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Customer Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Charge_Category__c</fullName>
        <label>Charge Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Company_Currency__c</fullName>
        <label>Company Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Total_Misc_Charge_Cost__c</fullName>
        <formula>inscor__Quantity_Requested__c *  inscor__Material_Company_Average_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Total Misc Charge Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Condition_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Condition Code</label>
        <referenceTo>inscor__Condition_Code__c</referenceTo>
        <relationshipLabel>BOM</relationshipLabel>
        <relationshipName>BOM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Create_Date__c</fullName>
        <label>Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>inscor__Customer_Supplied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Supplied?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Default_Output_Type__c</fullName>
        <label>Default Output Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Output_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__External_Comments__c</fullName>
        <label>External Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory</label>
        <referenceTo>inscor__Inventory_Line__c</referenceTo>
        <relationshipLabel>BOM</relationshipLabel>
        <relationshipName>BOM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Invoice_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Line</label>
        <referenceTo>inscor__Invoice_Line__c</referenceTo>
        <relationshipLabel>BOM</relationshipLabel>
        <relationshipName>BOMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Keyword__c</fullName>
        <formula>inscor__Product__r.inscor__Keyword__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Keyword</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Kit_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kit List</label>
        <referenceTo>inscor__Kit_List__c</referenceTo>
        <relationshipLabel>BOM</relationshipLabel>
        <relationshipName>BOM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Material_Average_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Material Average Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Material_Company_Average_Cost__c</fullName>
        <formula>inscor__Material_Average_Cost__c /  BLANKVALUE(inscor__Exchange_Rate__c, 1)</formula>
        <label>Material Company Average Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Material_Company_Price__c</fullName>
        <formula>inscor__Material_Price__c /  BLANKVALUE(inscor__Exchange_Rate__c, 1)</formula>
        <label>Material Company Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Material_Price__c</fullName>
        <label>Material Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Misc_Charge_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Misc Charge Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Misc_Charge_Source_Cost__c</fullName>
        <label>Misc Charge Source Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Misc_Charge_Source_Currency__c</fullName>
        <label>Misc Charge Source Currency</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Misc_Charge_Source_Price__c</fullName>
        <label>Misc Charge Source Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Multiply_by_WO_Qty__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Multiplies the BOM Quantity Requested by the quantity of the kits to be built when this template is applied to a Work Order. Will not confirm the quantity has been issued when the kits are built.</inlineHelpText>
        <label>Multiply by WO Qty?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Master</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 4) OR (2 AND 3)</booleanFilter>
            <errorMessage>Part master should be non inventory when adding misc charge.</errorMessage>
            <filterItems>
                <field>$Source.inscor__Type__c</field>
                <operation>notEqual</operation>
                <value>Misc Charge</value>
            </filterItems>
            <filterItems>
                <field>$Source.inscor__Type__c</field>
                <operation>equals</operation>
                <value>Misc Charge</value>
            </filterItems>
            <filterItems>
                <field>Product2.inscor__Non_Inventory_Item__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Product2.inscor__Non_Inventory_Item__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>BOM</relationshipLabel>
        <relationshipName>BOM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Qty_Remaining__c</fullName>
        <formula>inscor__Quantity_Requested__c -  (inscor__Quantity_Allocated__c +  inscor__Quantity_Issued__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qty Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Qty_Remaining_to_Issue__c</fullName>
        <formula>inscor__Quantity_Allocated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qty Remaining to Issue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Allocated__c</fullName>
        <label>Quantity Allocated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Consumed__c</fullName>
        <formula>inscor__Quantity_Issued__c -  inscor__Quantity_Returned__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Consumed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Invoiced__c</fullName>
        <label>Quantity Invoiced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Issued__c</fullName>
        <label>Quantity Issued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Removed__c</fullName>
        <label>Quantity Removed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Requested__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Reserved__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity Reserved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Returned__c</fullName>
        <label>Quantity Returned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Unbilled__c</fullName>
        <formula>inscor__Quantity_Consumed__c -  inscor__Quantity_Invoiced__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Unbilled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Rate_Date__c</fullName>
        <label>Rate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Rejection_Comment__c</fullName>
        <label>Rejection Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Requested_Reason__c</fullName>
        <label>Requested Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Missed In Evaluation</fullName>
                </value>
                <value>
                    <fullName>Additional Damage Found</fullName>
                </value>
                <value>
                    <fullName>Broken Hardware</fullName>
                </value>
                <value>
                    <fullName>Missing Hardware</fullName>
                </value>
                <value>
                    <fullName>SB Required</fullName>
                </value>
                <value>
                    <fullName>AD Required</fullName>
                </value>
                <value>
                    <fullName>Part Not On BOM List</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                    <isActive>false</isActive>
                    <label>Test</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Skill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Skill</label>
        <referenceTo>inscor__Skill__c</referenceTo>
        <relationshipLabel>BOM</relationshipLabel>
        <relationshipName>BOM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Waiting for Customer Approval</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Teardown_Quantity__c</fullName>
        <label>Teardown Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consumable</fullName>
                </value>
                <value>
                    <fullName>Replace</fullName>
                </value>
                <value>
                    <fullName>Inspect</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Remove</fullName>
                </value>
                <value>
                    <fullName>Misc Charge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Work_Order_Task__c</fullName>
        <label>Work Order Task</label>
        <referenceTo>inscor__Work_Order_Task__c</referenceTo>
        <relationshipLabel>BOM</relationshipLabel>
        <relationshipName>BOM</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>BOM</label>
    <listViews>
        <fullName>inscor__All</fullName>
        <columns>NAME</columns>
        <columns>inscor__Type__c</columns>
        <columns>inscor__Product__c</columns>
        <columns>inscor__Condition_Code__c</columns>
        <columns>inscor__Work_Order_Task__c</columns>
        <columns>inscor__Material_Average_Cost__c</columns>
        <columns>inscor__Material_Price__c</columns>
        <columns>inscor__Quantity_Requested__c</columns>
        <columns>inscor__Quantity_Allocated__c</columns>
        <columns>inscor__Quantity_Issued__c</columns>
        <columns>inscor__Qty_Remaining_to_Issue__c</columns>
        <columns>inscor__Quantity_Returned__c</columns>
        <columns>inscor__Skill__c</columns>
        <columns>inscor__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>inscor__Product__c</field>
            <operation>startsWith</operation>
            <value>misc</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BOMID-{0}</displayFormat>
        <label>Bill Of Materials ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BOM</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>inscor__Block_Misc_Charge_Type</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(inscor__Type__c, &apos;Misc Charge&apos;), inscor__Misc_Charge_Allowed__c = false)</errorConditionFormula>
        <errorMessage>Can&apos;t create BOM of type Misc Charge. Please use &quot;Add Misc Charge&quot; button at Task page.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Hours_Billed_Required_If_Type_Labor</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(inscor__Type__c , &quot;Labor&quot;) ,ISNULL( inscor__Hours__c ))</errorConditionFormula>
        <errorDisplayField>inscor__Hours__c</errorDisplayField>
        <errorMessage>Please Enter Hours Billed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Material_Price_Required_if_Type_Material</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(inscor__Type__c , &quot;Material&quot;) , ISBLANK(inscor__Material_Price__c))</errorConditionFormula>
        <errorDisplayField>inscor__Material_Price__c</errorDisplayField>
        <errorMessage>Please Select a Material Price.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Part_Number_Required_if_Type_Material</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(inscor__Type__c , &quot;Material&quot;) , ISBLANK(  inscor__Product__c ))</errorConditionFormula>
        <errorDisplayField>inscor__Product__c</errorDisplayField>
        <errorMessage>Please Select a Part Number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Prevent_Reserved_from_surpassing_Request</fullName>
        <active>true</active>
        <errorConditionFormula>inscor__Quantity_Reserved__c &gt; inscor__Quantity_Requested__c</errorConditionFormula>
        <errorMessage>The Quantity Reserved cannot be greater than the Quantity Requested</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Qty_Should_Greater_then_Issue_and_Return</fullName>
        <active>true</active>
        <errorConditionFormula>inscor__Product__r.inscor__Non_Inventory_Item__c == false &amp;&amp;  inscor__Quantity_Requested__c &lt; ( BLANKVALUE( inscor__Quantity_Issued__c, 0) -  BLANKVALUE(  inscor__Quantity_Returned__c, 0)  )</errorConditionFormula>
        <errorMessage>Quantity Requested cannot be less than the Quantity Issued minus the Quantity Returned. Please process a material return before reducing the Quantity Requested.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Skill_Required_If_Type_Labor</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(inscor__Type__c , &quot;Labor&quot;) ,ISBLANK( inscor__Skill__c  ))</errorConditionFormula>
        <errorDisplayField>inscor__Skill__c</errorDisplayField>
        <errorMessage>Please Enter a Skill.</errorMessage>
    </validationRules>
</CustomObject>